# pycat

./: LICENSE  README.md  pyproject.toml
pycat/: pycat
