[tool.poetry]
name = "pycat"
version = "0.1.0"
description = "python implementation of cat"
authors = ["Max G <maxdotdotg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
